--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -3,7 +3,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Inter', sans-serif;
+  font-family: 'OmeletDemo', sans-serif;
 }
 
 html, body {
@@ -11,6 +11,11 @@ html, body {
   height: 100%;
   background-color: var(--background);
   overflow: hidden;
+}
+
+/* Update all font-family declarations to use 'KonmekDemo' */
+:root {
+  font-family: 'KonmekDemo', sans-serif;
 }
 
 /* Main layout */
@@ -302,7 +307,6 @@ html, body {
   outline: none;
   border-color: rgba(129, 140, 248, 1);
   background-color: #fff;
-  box-shadow: 0 0 0 5px rgb(129 140 248 / 30%);
 }
 .icon {
   position: absolute;
@@ -314,40 +318,9 @@ html, body {
   pointer-events: none;
 }
 
-.login-left .circles {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  z-index: 1;
+/* Thai language support */
+:lang(th) {
+  font-family: 'KonmekDemo', sans-serif;
 }
 
-.login-left .circles li {
-  position: absolute;
-  display: block;
-  list-style: none;
-  width: 20px;
-  height: 20px;
-  background: rgba(255, 255, 255, 0.12);
-  animation: animate 25s linear infinite;
-  bottom: -150px;
-  border-radius: 16px;
-}
 
-.login-left .circles li:nth-child(1) { left: 25%; width: 80px; height: 80px; animation-delay: 0s; }
-.login-left .circles li:nth-child(2) { left: 10%; width: 20px; height: 20px; animation-delay: 2s; animation-duration: 12s; }
-.login-left .circles li:nth-child(3) { left: 70%; width: 20px; height: 20px; animation-delay: 4s; }
-.login-left .circles li:nth-child(4) { left: 40%; width: 60px; height: 60px; animation-delay: 0s; animation-duration: 18s; }
-.login-left .circles li:nth-child(5) { left: 65%; width: 20px; height: 20px; animation-delay: 0s; }
-.login-left .circles li:nth-child(6) { left: 75%; width: 110px; height: 110px; animation-delay: 3s; }
-.login-left .circles li:nth-child(7) { left: 35%; width: 150px; height: 150px; animation-delay: 7s; }
-.login-left .circles li:nth-child(8) { left: 50%; width: 25px; height: 25px; animation-delay: 15s; animation-duration: 45s; }
-.login-left .circles li:nth-child(9) { left: 20%; width: 15px; height: 15px; animation-delay: 2s; animation-duration: 35s; }
-.login-left .circles li:nth-child(10) { left: 85%; width: 150px; height: 150px; animation-delay: 0s; animation-duration: 11s; }
-
-@keyframes animate {
-  0% { transform: translateY(0) rotate(0deg); opacity: 1; border-radius: 16px; }
-  100% { transform: translateY(-1000px) rotate(720deg); opacity: 0; border-radius: 16px; }
-}
