--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'KonmekDemo', sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -26,6 +26,7 @@ body {
   margin: 0;
   min-height: 100vh;
   overflow-y: auto;
+  font-family: 'OmeletDemo', sans-serif;
 }
 
 #root {
@@ -114,4 +115,8 @@ html, body {
   button {
     background-color: #f9f9f9;
   }
+}
+
+:lang(th) {
+  font-family: 'KonmekDemo', sans-serif;
 }
