--- a/src/components/Layout/setting.css
+++ b/src/components/Layout/setting.css
@@ -1,4 +1,5 @@
 .settings-container {
+  margin-top: 4rem !important;  /* Increase this value to move content down */
   display: flex;
   gap: 2rem;
   padding: 1rem;
